fix(phase_4): tests refactored and cleaned.